SERVER-91571 Error if precision-mode encoding cannot be used for FLE2 floating-point range fields (#23753)

GitOrigin-RevId: 28da9ce184056f38cbed4893d9145db91c3a70d6