src/mongo/crypto/fle_numeric.h
@@ -122,4 +122,25 @@ OSTType_Decimal128 getTypeInfoDecimal128(Decimal128 value,
                                          boost::optional<Decimal128> max,
                                          boost::optional<uint32_t> precision);
 
+/**
+ * Determines whether the range of Decimal128 values, between min and max (inclusive),
+ * with the given precision, can be re-encoded in less than 128 bits, in order to reduce
+ * the size of the hypergraph (ie. "precision-mode"). If so, the number of bits needed
+ * to represent the range of values is returned in maxBitsOut.
+ */
+bool canUsePrecisionMode(Decimal128 min,
+                         Decimal128 max,
+                         uint32_t precision,
+                         uint32_t* maxBitsOut = nullptr);
+/**
+ * Determines whether the range of double-precision floating point values, between min and max
+ * (inclusive), with the given precision, can be re-encoded in less than 64 bits, in order to
+ * reduce the size of the hypergraph (ie. "precision-mode"). If so, the number of bits needed to
+ * represent the range of values is returned in maxBitsOut.
+ */
+bool canUsePrecisionMode(double min,
+                         double max,
+                         uint32_t precision,
+                         uint32_t* maxBitsOut = nullptr);
+
 }  // namespace mongo
